<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

    <View
        android:id="@+id/baseStatusBarView"
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <RelativeLayout
        android:id="@+id/tab_headerView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/baseStatusBarView">

    </RelativeLayout>

    <com.android.lq.p2p.lili.view.MyRadioGroup
        android:id="@+id/main_bottom_vg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_color"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/main_bottom_rb_0"
            style="@style/tab_icon"
            android:checked="true"
            android:drawableTop="@drawable/selector_nav_tab_home"
            android:text="@string/tab_home"/>

        <RadioButton
            android:id="@+id/main_bottom_rb_1"
            style="@style/tab_icon"
            android:drawableTop="@drawable/selector_nav_tab_invest"
            android:text="@string/tab_invest"/>

        <RadioButton
            android:id="@+id/main_bottom_rb_2"
            style="@style/tab_icon"
            android:drawableTop="@drawable/selector_nav_tab_news"
            android:text="@string/tab_news"/>

        <RadioButton
            android:id="@+id/main_bottom_rb_3"
            style="@style/tab_icon"
            android:drawableTop="@drawable/selector_nav_tab_borrow"
            android:text="@string/tab_msg"/>
    </com.android.lq.p2p.lili.view.MyRadioGroup>


    <View
        android:id="@+id/main_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@+id/main_bottom_vg"/>

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_bottom_line"
        android:layout_below="@+id/tab_headerView"/>

    <View
        android:id="@+id/main_new_message_icon"
        android:layout_width="6dp"
        android:layout_height="6dp"
        android:layout_alignRight="@+id/main_bottom_vg"
        android:layout_alignTop="@+id/main_bottom_vg"
        android:layout_marginRight="22dp"
        android:layout_marginTop="7dp"
        android:background="@mipmap/ic_launcher"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/night_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50000000"
        android:gravity="center"
        android:visibility="gone">
    </RelativeLayout>

</RelativeLayout>